@@ -1,5 +1,8 @@
 Change Log:
 
+**7/11/16**
+-- Added new input field to synchronize cooldowns (FoK, RoV, Companion) with CoE (default is "selected"). When selected, FoK, RoV and Companion (wolf/bat) will only activate when appropriate CoE element buff is up. Desired CoE buff is selected based on rune of FoK, RoV, Spender or Primary skill.
+
 **7/7/16**
 -- Added support for Lord Greenstone's Fan
 -- Added Fan of Knives to skill cooldown list
